@@ -2816,7 +2816,7 @@ Inst59Quest1_Level = "31"
 Inst59Quest1_Attain = "26"
 Inst59Quest1_Aim = "Kill 50 members of the Scarlet Crusade within the Scarlet Halls."
 Inst59Quest1_Location = "Hooded Crusader (Scarlet Halls; "..BLUE.."Entrance"..WHITE..")"
-Inst59Quest1_Note = ""
+Inst59Quest1_Note = "Any Scarlet Crusaders count."
 Inst59Quest1_Prequest = "None"
 Inst59Quest1_Folgequest = "None"
 -- No Rewards for this quest
@@ -2827,7 +2827,7 @@ Inst59Quest2_Level = "90"
 Inst59Quest2_Attain = "90"
 Inst59Quest2_Aim = "Kill 50 members of the Scarlet Crusade within the Scarlet Halls."
 Inst59Quest2_Location = "Hooded Crusader (Scarlet Halls; "..BLUE.."Entrance"..WHITE..")"
-Inst59Quest2_Note = ""
+Inst59Quest2_Note = "Any Scarlet Crusaders count."
 Inst59Quest2_Prequest = "None"
 Inst59Quest2_Folgequest = "None"
 -- No Rewards for this quest
@@ -12225,7 +12225,7 @@ Inst114Quest1_Level = "89"
 Inst114Quest1_Attain = "87"
 Inst114Quest1_Aim = "Collect the Lantern of the Sorcerer King, Mad King Meng's Balance, Qiang's 'The Science of War', and Subetai's Bow of the Swift."
 Inst114Quest1_Location = "Sinan the Dreamer (Mogu'Shan Palace; "..BLUE.."Entrance"..WHITE..")"
-Inst114Quest1_Note = "- Lantern of the Sorcerer King is at "..YELLOW.."[??]"..WHITE..".\n- Mad King Meng's Balance is at "..YELLOW.."[??]"..WHITE..".\n- Qiang's 'The Science of War' is at "..YELLOW.."[??]"..WHITE..".\n- Subetai's Bow of the Swift is at is at "..YELLOW.."[??]"..WHITE.."."
+Inst114Quest1_Note = "All items are in the Vault of Kings between the first and second bosses."
 Inst114Quest1_Prequest = "None"
 Inst114Quest1_Folgequest = "None"
 -- Reward varies for each class
@@ -12279,7 +12279,7 @@ Inst115Quest1_Level = "88"
 Inst115Quest1_Attain = "87"
 Inst115Quest1_Aim = "Meet Ban Bearheart inside the Shado-Pan Monastery."
 Inst115Quest1_Location = "Ban Bearheart (Shado-pan Monastery; "..BLUE.."Entrance"..WHITE..")"
-Inst115Quest1_Note = ""
+Inst115Quest1_Note = "Ban Bearheart is just inside the entrance."
 Inst115Quest1_Prequest = "None"
 Inst115Quest1_Folgequest = "Lord of the Shado-Pan"
 -- No Rewards for this quest
